# OTUSPythonPro

./: README.md
01_new_project/: lecture.ipynb
01_new_project/homework/release/: envcreate.sh
01_new_project/homework/release/log_analyzer/: README.md  config.json  pyproject.toml
01_new_project/homework/release/log_analyzer/reports/: report.html
01_new_project/homework/release/log_analyzer/templates/: report.html
01_new_project/log_analyzer/: .pre-commit-config.yaml  Makefile  log_analyzer.py
01_new_project/log_analyzer/reports/: report.html
01_new_project/log_analyzer/templates/: report.html
