[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = "homework_1_OTUS"
authors = ["MichailSolov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
